feat: 주제영역 visible false인 컬럼 볼 수 있는 기능 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -584,5 +584,6 @@
   "reportInfoChangeSuccess":"Saving report information was successful.",
   "failReportDelete": "Report deletion failed.",
   "successReportDelete": "Report deletion was successful.",
-  "linkReportCorrupted": "Failed to retrieve connection report."
+  "linkReportCorrupted": "Failed to retrieve connection report.",
+  "showHiddenFields": "Show hidden fields"
 }
