환경설정 파일 저장 기능 개발

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -105,7 +105,6 @@
       "spreadJsDesignLicense": "SpreadJS 디자이너 키",
       "kakaoMapApiKey": "카카오 지도 API 키",
       "mainTitle": "제목",
-      "webUrl": "URL",
       "loginImage": "로그인 이미지",
       "logo": "아이콘 이미지",
       "wiDefaultPage": "초기화면"
@@ -138,12 +137,17 @@
       ]
     },
     "menu": {
-      "adhoc": "비정형 보고서",
-      "dashboard": "대시보드",
-      "spreadSheet": "스프레드시트",
-      "dataset": "데이터 집합",
-      "config": "환경설정",
-      "datasetViewer": "데이터 집합 뷰어",
+      "tabAdhoc": "비정형 보고서",
+      "tabDashboard": "대시보드",
+      "tabSpreadSheet": "스프레드시트",
+      "tabDataset": "데이터 집합",
+      "tabConfig": "환경설정",
+      "tabDatasetViewer": "데이터 집합 뷰어",
+      "tabPopUpAdhoc": "비정형 보고서",
+      "tabPopUpDashboard": "대시보드",
+      "tabPopUpSpreadSheet": "스프레드시트",
+      "tabPopUpConfig": "환경설정",
+      "tabPopUpDatasetViewer": "데이터 집합 뷰어",
       "menuAuth": "메뉴 권한 사용",
       "lookQuery": "쿼리보기",
       "cubeData": "주제 영역 데이터",
@@ -154,7 +158,19 @@
       "newDataSetFocusSingleTable": "신규 데이터 집합(단일 테이블)",
       "userDataUpload": "사용자 데이터 업로드",
       "originalDataset": "기존 데이터 집합",
-      "xlsx": "xlsx",
+      "officeVisible": "표시",
+      "officeXlsx": "xlsx",
+      "officeXls": "xls",
+      "officeDoc": "doc",
+      "officePpt": "ppt",
+      "hancomVisible": "표시",
+      "hancomHwp": "hwp",
+      "hancomCell": "cell",
+      "hancomShow": "show",
+      "etcVisible": "표시",
+      "etcImg": "img",
+      "etcHtml": "html",
+      "etcPpt": "ppt",
       "FolderGroup": "폴더 그룹화"
     },
     "advanced": {
@@ -779,9 +795,9 @@
   "folder": "폴더",
   "report": "보고서",
   "adHocLayoutOptions":  [
-    {"id": "chart", "text": "차트만 보기"},
-    {"id": "pivot", "text": "피벗그리드만 보기"},
-    {"id": "chart_pivot", "text": "차트, 피벗 전부 보기"}
+    {"name": "chart", "caption": "차트만 보기"},
+    {"name": "pivot", "caption": "피벗그리드만 보기"},
+    {"name": "chart_pivot", "caption": "차트, 피벗 전부 보기"}
   ],
   "gridVisibility": "그리드 표시 여부",
   "chartVisibility": "차트 표시 여부",
