feat: 보고서 형상관리(진행중)

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -579,5 +579,6 @@
   "loadData": "Load data",
   "reportInfoChangeSuccess":"Saving report information was successful.",
   "failReportDelete": "Report deletion failed.",
-  "successReportDelete": "Report deletion was successful."
+  "successReportDelete": "Report deletion was successful.",
+  "reportHistory": "Report History"
 }
