feat: 보고서 형상관리 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -580,5 +580,11 @@
   "reportInfoChangeSuccess":"Saving report information was successful.",
   "failReportDelete": "Report deletion failed.",
   "successReportDelete": "Report deletion was successful.",
-  "reportHistory": "Report History"
+  "reportHistory": {
+    "reportHistory": "Report History",
+    "index": "INDEX",
+    "savedDate": "SAVED DATE",
+    "user": "USER",
+    "restore": "RESTORE"
+  }
 }
