--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -805,5 +805,11 @@
   "reportInfoChangeSuccess":"보고서 정보 저장에 성공 했습니다.",
   "failReportDelete": "보고서 삭제에 실패 했습니다.",
   "successReportDelete": "보고서 삭제에 성공 했습니다.",
-  "reportHistory": "보고서 형상 관리"
+  "reportHistory": {
+    "reportHistory": "보고서 형상 관리",
+    "index": "순번",
+    "savedDate": "저장 날짜",
+    "user": "사용자",
+    "restore": "복원"
+  }
 }
