feat: 보고서 형상 관리 경고 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -585,6 +585,7 @@
     "index": "INDEX",
     "savedDate": "SAVED DATE",
     "user": "USER",
-    "restore": "RESTORE"
+    "restore": "RESTORE",
+    "warning": "Unsaved changes may be lost. Do you want to continue?"
   }
 }
