--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -810,6 +810,7 @@
     "index": "순번",
     "savedDate": "저장 날짜",
     "user": "사용자",
-    "restore": "복원"
+    "restore": "복원",
+    "warning": "저장되지 않은 작업 내용이 손실될 수 있습니다. 계속하시겠습니까?"
   }
 }
