feat: 쿼리 실행 결과보기 개발

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -826,5 +826,9 @@
     "user": "사용자",
     "restore": "복원",
     "warning": "저장되지 않은 작업 내용이 손실될 수 있습니다. 계속하시겠습니까?"
-  }
+  },
+  "showQueryExecutor": "쿼리 실행 결과 보기",
+  "executeSQL": "SQL 실행",
+  "exportSQL": "내려받기",
+  "executeSQLAlert": "테스트 데이터는 100건만 보여집니다."
 }
