feat: 전체 다운로드 - 이미지, Word, PowerPoint, pdf 추가

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -278,8 +278,8 @@
   "excelXlsx": "EXCEL(.xlsx)",
   "excelMergeXlsx": "EXCEL-MG(.xlsx)",
   "excelXls": "EXCEL(.xls)",
-  "word": "WORD(.doc)",
-  "powerpoint": "POWERPOINT(.ppt)",
+  "word": "WORD(.docx)",
+  "powerpoint": "POWERPOINT(.pptx)",
   "hwp": "hwp",
   "cell": "cell",
   "show": "show",
