--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -584,5 +584,10 @@
   "reportInfoChangeSuccess":"Saving report information was successful.",
   "failReportDelete": "Report deletion failed.",
   "successReportDelete": "Report deletion was successful.",
-  "linkReportCorrupted": "Failed to retrieve connection report."
+  "linkReportCorrupted": "Failed to retrieve connection report.",
+  "dataItemType": "division",
+  "dataItemTypeList": [
+    {"name": "measure", "caption": "measure"},
+    {"name": "dimension", "caption": "dimension"}
+  ]
 }
