--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -810,5 +810,10 @@
   "reportInfoChangeSuccess":"보고서 정보 저장에 성공 했습니다.",
   "failReportDelete": "보고서 삭제에 실패 했습니다.",
   "successReportDelete": "보고서 삭제에 성공 했습니다.",
-  "linkReportCorrupted": "연결보고서를 가져오는데 실패 했습니다."
+  "linkReportCorrupted": "연결보고서를 가져오는데 실패 했습니다.",
+  "dataItemType": "구분",
+  "dataItemTypeList": [
+    {"name": "measure", "caption": "측정값"},
+    {"name": "dimension", "caption": "차원"}
+  ]
 }
