feat: 환경설정 프론트단 적용

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -155,16 +155,16 @@
       "tabAdhoc": "비정형 보고서",
       "tabDashboard": "대시보드",
       "tabSpreadSheet": "스프레드시트",
-      "tabDataset": "데이터 집합",
       "tabConfig": "환경설정",
-      "tabDatasetViewer": "데이터 집합 뷰어",
       "tabPopUpAdhoc": "비정형 보고서",
       "tabPopUpDashboard": "대시보드",
       "tabPopUpSpreadSheet": "스프레드시트",
       "tabPopUpConfig": "환경설정",
-      "tabPopUpDatasetViewer": "데이터 집합 뷰어",
       "menuAuth": "메뉴 권한 사용",
       "lookQuery": "쿼리보기",
+      "reportHistory": "보고서 형상 관리",
+      "searchReport2": "리포트 찾기",
+      "searchReport": "리포트 찾기",
       "cubeData": "주제 영역 데이터",
       "newDataSetFocusCube": "신규 데이터 집합(주제 영역 기준)",
       "newDataSetFocusDs": "신규 데이터 집합(데이터 원본 기준)",
