--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -166,11 +166,11 @@
       "searchReport2": "리포트 찾기",
       "searchReport": "리포트 찾기",
       "cubeData": "주제 영역 데이터",
-      "newDataSetFocusCube": "신규 데이터 집합(주제 영역 기준)",
-      "newDataSetFocusDs": "신규 데이터 집합(데이터 원본 기준)",
-      "newDataSetFocusCrossDomainJoin": "신규 데이터 집합(이기종 조인)",
-      "newDataSetFocusQuery": "신규 데이터 집합(쿼리 직접 입력)",
-      "newDataSetFocusSingleTable": "신규 데이터 집합(단일 테이블)",
+      "newDatasetByCube": "신규 데이터 집합(주제 영역 기준)",
+      "newDatasetByDs": "신규 데이터 집합(데이터 원본 기준)",
+      "newDatasetByCrossDomainJoin": "신규 데이터 집합(이기종 조인)",
+      "newDatasetByQuery": "신규 데이터 집합(쿼리 직접 입력)",
+      "newDatasetBySingleTable": "신규 데이터 집합(단일 테이블)",
       "userDataUpload": "사용자 데이터 업로드",
       "originalDataset": "기존 데이터 집합",
       "officeVisible": "표시",
