--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -967,5 +967,10 @@
   "showQueryExecutor": "쿼리 실행 결과 보기",
   "executeSQL": "SQL 실행",
   "exportSQL": "내려받기",
-  "executeSQLAlert": "테스트 데이터는 100건만 보여집니다."
+  "executeSQLAlert": "테스트 데이터는 100건만 보여집니다.",
+  "reportTypeSelectBox": [
+    {"name": "DashAny", "caption": "대시보드"},
+    {"name": "AdHoc", "caption": "비정형"},
+    {"name": "Excel", "caption": "스프레드"}
+  ]
 }
