--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -455,9 +455,9 @@
   "folder": "Folder",
   "report": "Report",
   "adHocLayoutOptions":  [
-    {"id": "chart", "text": "Only chart"},
-    {"id": "pivot", "text": "Only PivotGrid"},
-    {"id": "chart_pivot", "text": "Show both"}
+    {"name": "chart", "caption": "Only chart"},
+    {"name": "pivot", "caption": "Only PivotGrid"},
+    {"name": "chart_pivot", "caption": "Show both"}
   ],
   "editReportName": "Edit ReportName",
   "reportDescription": "Report Description",
