fix/비정형 변동측정값 클릭에러
1. 메인은 피벗그리드만 보기에서 조회 시 차트, 피벗 데이토 전부 가져옴. 홈앤쇼핑 브랜치는 하나만 가져옴.
TODO 주석 추가

2. 변동측정값 적용은 피벗 그리드만 적용 -> 피벗그리드에 데이터를 가져온 후 변동측정값 클릭 시 모달이 나오게 변경.

3. 변동측정값에서 변화량, 변화비율 같은 경우 행 과 열이 전부 필요하므로 경고문구로 행과 열이 전부 필요하다고 띄워줌. (나머지는 문구 없음) -> 문구는 단순 경고용이고, 저장은 됨.

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -972,5 +972,6 @@
     {"name": "DashAny", "caption": "대시보드"},
     {"name": "AdHoc", "caption": "비정형"},
     {"name": "Excel", "caption": "스프레드"}
-  ]
+  ],
+  "requiredRowColumn": "데이터 항목 행(row)과 열(column)이 전부 필요한 항목입니다."
 }
