--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -604,5 +604,6 @@
     {"name": "DashAny", "caption": "Dashboard"},
     {"name": "AdHoc", "caption": "Adhoc"},
     {"name": "Excel", "caption": "Excel"}
-  ]
+  ],
+  "requiredRowColumn": "All data items rows and columns are required."
 }
