--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -617,5 +617,6 @@
   "editContainerName": "Edit container name",
   "minContainerMsg": "At least one container must be present.",
   "viwerDownloadMsg": "Please open the report and proceed with the download.",
-  "downloadNeedViewItemsMsg": "You can download it after viewing all items."
+  "downloadNeedViewItemsMsg": "You can download it after viewing all items.",
+  "requiredRowColumn": "All data items rows and columns are required."
 }
