--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -987,5 +987,6 @@
   "viwerDownloadMsg": "보고서를 열고 다운로드를 진행해 주세요.",
   "downloadNeedViewItemsMsg": "모든 아이템을 조회한 후 다운로드할 수 있습니다.",
   "downloadNeedViewItemsMsg": "모든 아이템을 조회한 후 다운로드할 수 있습니다.",
-  "blankContainerNameMsg": "컨테이너 명은 비워둘 수 없습니다."
+  "blankContainerNameMsg": "컨테이너 명은 비워둘 수 없습니다.",
+  "requiredRowColumn": "데이터 항목 행(row)과 열(column)이 전부 필요한 항목입니다."
 }
