feat: 컨테이너 다운로드 추가

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -975,5 +975,13 @@
     {"name": "Excel", "caption": "스프레드"}
   ],
   "requiredRowColumn": "데이터 항목 행(row)과 열(column)이 전부 필요한 항목입니다.",
-  "viwerDownloadMsg": "보고서를 열고 다운로드를 진행해 주세요."
+  "viwerDownloadMsg": "보고서를 열고 다운로드를 진행해 주세요.",
+  "tab": "탭",
+  "tabHeaderEnabled": "컨테이너 헤더 활성화",
+  "remove": "삭제",
+  "close": "닫기",
+  "modify": "수정",
+  "containerName": "컨테이너 명",
+  "editContainerName": "컨테이너 이름 변경",
+  "minContainerMsg": "최소 하나 이상의 컨테이너가 존재해야 합니다."
 }
