fix/뷰어 다운로드 에러

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -615,5 +615,6 @@
   "modify": "Modify",
   "containerName": "container name",
   "editContainerName": "Edit container name",
-  "minContainerMsg": "At least one container must be present."
+  "minContainerMsg": "At least one container must be present.",
+  "viwerDownloadMsg": "Please open the report and proceed with the download."
 }
