fix/마이페이지 뷰어 설정 초기화 Confirm 문구
마이페이지 초기화(각 항목 초기화) confirm 문구 안나오는 현상 수정

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -554,7 +554,8 @@
   "eachItemResetConfirm": {
     "defaultReportId": "Do you want to reset the default report?",
     "defaultItem": "Do you want to reset default items?",
-    "defaultPalette": "Do you want to reset default colors?"
+    "defaultPalette": "Do you want to reset default colors?",
+    "defaultViewerReportId": "Would you like to reset the viewer default report?"
   },
   "myPage": "My Page",
   "requiredUserNm": "User name is required.",
