--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -984,5 +984,6 @@
   "containerName": "컨테이너 명",
   "editContainerName": "컨테이너 이름 변경",
   "minContainerMsg": "최소 하나 이상의 컨테이너가 존재해야 합니다.",
-  "viwerDownloadMsg": "보고서를 열고 다운로드를 진행해 주세요."
+  "viwerDownloadMsg": "보고서를 열고 다운로드를 진행해 주세요.",
+  "downloadNeedViewItemsMsg": "모든 아이템을 조회한 후 다운로드할 수 있습니다."
 }
