--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -985,5 +985,7 @@
   "editContainerName": "컨테이너 이름 변경",
   "minContainerMsg": "최소 하나 이상의 컨테이너가 존재해야 합니다.",
   "viwerDownloadMsg": "보고서를 열고 다운로드를 진행해 주세요.",
-  "downloadNeedViewItemsMsg": "모든 아이템을 조회한 후 다운로드할 수 있습니다."
+  "downloadNeedViewItemsMsg": "모든 아이템을 조회한 후 다운로드할 수 있습니다.",
+  "downloadNeedViewItemsMsg": "모든 아이템을 조회한 후 다운로드할 수 있습니다.",
+  "blankContainerNameMsg": "컨테이너 명은 비워둘 수 없습니다."
 }
