--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -645,8 +645,8 @@
   "thousands": "천 단위",
   "milions": "백만 단위",
   "bilions": "십억 단위",
-  "precision": "정도",
-  "precisionOption": "정도 옵션",
+  "precision": "소수점 자리수",
+  "precisionOption": "소수점 자리수 옵션",
   "unit": "단위",
   "all": "전체",
   "showGrid": "그리드로 보기",
