--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -618,5 +618,7 @@
   "minContainerMsg": "At least one container must be present.",
   "viwerDownloadMsg": "Please open the report and proceed with the download.",
   "downloadNeedViewItemsMsg": "You can download it after viewing all items.",
-  "requiredRowColumn": "All data items rows and columns are required."
+  "requiredRowColumn": "All data items rows and columns are required.",
+  "pointMakerExplain": "* Point marker display is applied to point/line series and area series (excluding bubbles).",
+  "pointMakerExplain2": "* Ignoring empty points, viewing in reverse order changes and applies the same as other measurements."
 }
