--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -618,5 +618,6 @@
   "minContainerMsg": "At least one container must be present.",
   "viwerDownloadMsg": "Please open the report and proceed with the download.",
   "downloadNeedViewItemsMsg": "You can download it after viewing all items.",
-  "requiredRowColumn": "All data items rows and columns are required."
+  "requiredRowColumn": "All data items rows and columns are required.",
+  "spreadNoData": "There is no data. (Dataset with no data: "
 }
