hns/perf/뷰어 보고서 갯수 제한 및 보고서 탭 범위 넘어가는 현상
1. 보고서를 여러개 열면 헤더 오른쪽 요소와 보고서 탭이 겹쳐서 수정.

2. 보고서 탭은 5개 까지만 열수 있게 변경.

3. 일정 길이 초과시 보고서 탭의 길이를 줄여 맞춰줌.

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -617,8 +617,8 @@
   "editContainerName": "Edit container name",
   "minContainerMsg": "At least one container must be present.",
   "downloadNeedViewItemsMsg": "You can download it after viewing all items.",
-  "requiredRowColumn": "All data items rows and columns are required.",
   "spreadNoData": "There is no data. (Dataset with no data: ",
   "pointMakerExplain": "* Point marker display is applied to point/line series and area series (excluding bubbles).",
-  "pointMakerExplain2": "* Ignoring empty points, viewing in reverse order changes and applies the same as other measurements."
+  "pointMakerExplain2": "* Ignoring empty points, viewing in reverse order changes and applies the same as other measurements.",
+  "viewerReportLimit": "You can view up to 5 viewer reports."
 }
