--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -989,5 +989,6 @@
   "requiredRowColumn": "데이터 항목 행(row)과 열(column)이 전부 필요한 항목입니다.",
   "spreadNoData": "데이터가 없습니다. (데이터가 없는 데이터집합: ",
   "pointMakerExplain": "* 포인트 마커 표시 적용은 점/선 계열, 영역 계열(버블 제외)에서 적용이 됩니다.",
-  "pointMakerExplain2": "* 빈 포인트 무시, 역순으로 보기는 다른 측정값과 동일하게 변경, 적용됩니다."
+  "pointMakerExplain2": "* 빈 포인트 무시, 역순으로 보기는 다른 측정값과 동일하게 변경, 적용됩니다.",
+  "preventinstantReportRetrieval": "보고서 바로 조회 막기"
 }
