hns/perf/환경설정_개인보고서 관리
1. 환경설정 보고서/폴더 관리 메뉴에 개인보고서 관리 추가.

2. 유저 목록을 가져온 후 해당 유저 클릭 시 해당 유저에 해당하는 개인 보고서를 가져옴.

3. 개인 보고서 클릭 시 보고서 정보 와 실행 버튼으로 새 탭을 띄워 해당 보고서 불러옴.

4. sessionStorage 사용 하여 불러올 보고서 조회.
5. 마이페이지의 보고서 즐겨찾기와 충돌 방지로 분기

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -621,5 +621,9 @@
   "pointMakerExplain": "* Point marker display is applied to point/line series and area series (excluding bubbles).",
   "pointMakerExplain2": "* Ignoring empty points, viewing in reverse order changes and applies the same as other measurements.",
   "checkingInitReportRetrieval": "Prevent instant Report Retrieval",
-  "viewerReportLimit": "You can view up to 5 viewer reports."
+  "viewerReportLimit": "You can view up to 5 viewer reports.",
+  "privateReportList": "Personal Report List",
+  "privateReportListNoDataTxt": "There are no personal folders/reports for that user.",
+  "execute": "execution",
+  "privateReportGetError": "Personal reports cannot be loaded. Please contact your administrator."
 }
