--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -990,5 +990,9 @@
   "pointMakerExplain": "* 포인트 마커 표시 적용은 점/선 계열, 영역 계열(버블 제외)에서 적용이 됩니다.",
   "pointMakerExplain2": "* 빈 포인트 무시, 역순으로 보기는 다른 측정값과 동일하게 변경, 적용됩니다.",
   "checkingInitReportRetrieval": "자동 조회 여부",
-  "viewerReportLimit": "뷰어 보고서는 5개까지 조회 가능합니다."
+  "viewerReportLimit": "뷰어 보고서는 5개까지 조회 가능합니다.",
+  "privateReportList": "개인 보고서 목록",
+  "privateReportListNoDataTxt": "해당 사용자의 개인 폴더/보고서가 없습니다.",
+  "execute": "실행",
+  "privateReportGetError": "개인 보고서를 불러올 수 없습니다. 관리자에게 문의하세요."
 }
