feat/레포트 권한 작성/배포 권한 커스터마이징
1. 보고서 폴더 작성 배포 권한 수정
 1-1. 불러오기 권한 "조회하기" 권한으로 통일
 1-2. "작성/배포" 권한 저장 삭제 및 데이터원본 수정 못하도록 변경

--- a/src/main/view/src/config/localization/devExpress/ko.json
+++ b/src/main/view/src/config/localization/devExpress/ko.json
@@ -195,7 +195,7 @@
       "dxPager-ariaPageNumber": "Page number",
 
       "dxPivotGrid-grandTotal": "총계",
-      "dxPivotGrid-total": "{0} 전체",
+      "dxPivotGrid-total": "{0}",
       "dxPivotGrid-fieldChooserTitle": "Field Chooser",
       "dxPivotGrid-showFieldChooser": "Show Field Chooser",
       "dxPivotGrid-expandAll": "Expand All",
