--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -244,6 +244,7 @@
   "editFieldName": "Edit Field Name",
   "reportNotDeleteMsg": "This report has not been saved.",
   "reportDeleteMsg": "Are you sure you want to delete the report?",
+  "reportPermission": "You don't have permission.",
   "sortByItem": "Sort By Item",
   "newSortByItem": "New Sort By Item",
   "dataHighlight": "Data Highlight",
@@ -297,9 +298,11 @@
   "groupReport": "groupReport",
   "groupDataset": "groupDataset",
   "groupDatasource": "groupDatasource",
+  "groupAppMenu": "groupApp",
   "userReport": "userReport",
   "userDataset": "userDataset",
   "userDatasource": "userDatasource",
+  "userAppMenu": "userApp",
   "round": "Round",
   "ceil": "Round Up",
   "floor": "Round Down",
