--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -186,7 +186,17 @@
       "etcImg": "img",
       "etcHtml": "html",
       "etcPpt": "ppt",
-      "FolderGroup": "폴더 그룹화"
+      "FolderGroup": "폴더 그룹화",
+      "configTabMenuSetting": "환경설정 탭 표시 여부",
+      "mypageConfigSetting": "마이페이지",
+      "generalConfig":"환경설정",
+      "userGroupConfig":"사용자/그룹관리",
+      "authConfig":"권한",
+      "reportFolderConfig":"보고서/폴더관리",
+      "datasourceConfig":"데이터원본 추가",
+      "logMoniterConfig":"로그",
+      "searchQueryConfig":"쿼리검색",
+      "dataLock":"최대 조회 기간 설정"
     },
     "advanced": {
       "dataManagement": "데이터 관리",
@@ -531,6 +541,7 @@
   "editFieldName": "필드 명 수정",
   "reportNotDeleteMsg": "저장되지 않은 보고서 입니다.",
   "reportDeleteMsg": "보고서를 삭제하시겠습니까?",
+  "reportPermission": "보고서 수정 권한이 없습니다.",
   "sortByItem": "정렬 기준 항목",
   "newSortByItem": "새 정렬 기준 항목",
   "dataHighlight": "데이터 하이라이트",
@@ -605,9 +616,11 @@
   "groupReport": "그룹 보고서",
   "groupDataset": "그룹 데이터 집합",
   "groupDatasource": "그룹 데이터 원본",
+  "groupAppMenu": "그룹 앱 및 기능",
   "userReport": "사용자 보고서",
   "userDataset": "사용자 데이터 집합",
   "userDatasource": "사용자 데이터 원본",
+  "userAppMenu": "사용자 앱 및 기능",
   "percent": "%",
   "argumentValue": "인수 및 값",
   "valuePercent": "값 및 %",
