--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -1007,5 +1007,6 @@
   "privateReportList": "개인 보고서 목록",
   "privateReportListNoDataTxt": "해당 사용자의 개인 폴더/보고서가 없습니다.",
   "execute": "실행",
-  "privateReportGetError": "개인 보고서를 불러올 수 없습니다. 관리자에게 문의하세요."
+  "privateReportGetError": "개인 보고서를 불러올 수 없습니다. 관리자에게 문의하세요.",
+  "paramEditInputRequired": "입력창에서 조건절은 필수 입력 입니다."
 }
