hotfix: 함수없음 추가
1. localization 추가
2. 컴포넌트 리스트에 추가
3. 큐브 쿼리 생성시 NOFUNC의 경우 함수없이 표현

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -39,6 +39,7 @@
   "ignoreMasterFilter": "Ignore Master Filter",
   "targetDimension": "Target Dimension",
   "dimensionGroup": "Dimension Group",
+  "NoFunction": "No Function",
   "count": "Count",
   "distinctCount": "Dinstinct Count",
   "sum": "Sum",
