--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -556,7 +556,9 @@
   "range": "range",
   "rangeBarlengthAlert": "For rangeBar items, the number of measurements in range 1 and range 2 must be the same.",
   "eachItemResetConfirm": {
-    "defaultReportId": "Do you want to reset the default report?",
+    "defaultReportId": "Do you want to reset the dashboard default reports?",
+    "adHocDefaultReportId": "Would you like to initialize a ragged default report?",
+    "excelDefaultReportId": "Would you like to reset the spread default report?",
     "defaultItem": "Do you want to reset default items?",
     "defaultPalette": "Do you want to reset default colors?",
     "defaultViewerReportId": "Would you like to reset the viewer default report?"
