--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -929,7 +929,9 @@
   "selectDataset": "데이터 집합을 선택해 주세요.",
   "checkDwReport": "보고서의 데이터가 BOS 와 일치하지 않습니다.\n\n code: ",
   "eachItemResetConfirm": {
-    "defaultReportId": "기본 보고서를 초기화 하시겠습니까?",
+    "defaultReportId": "대시보드 기본 보고서를 초기화 하시겠습니까?",
+    "adHocDefaultReportId": "비정형 기본 보고서를 초기화 하시겠습니까?",
+    "excelDefaultReportId": "스프레드 기본 보고서를 초기화 하시겠습니까?",
     "defaultItem": "기본 아이템을 초기화 하시겠습니까?",
     "defaultPalette": "기본 색상을 초기화 하시겠습니까?",
     "defaultViewerReportId": "뷰어 기본 보고서를 초기화 하시겠습니까?"
