--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -103,7 +103,7 @@
       "licenseInfo": "라이센스 정보",
       "solutionTitle": "솔루션 제목",
       "licensesKey": "OLAP 라이선스 키",
-      "spreadJsLicense": "SpreadJS 라이센스 키",
+      "spreadJsLicense": "SpreadJS 라이선스 키",
       "spreadJsDesignLicense": "SpreadJS 디자이너 키",
       "kakaoMapApiKey": "카카오 지도 API 키",
       "mainTitle": "제목",
