feat: 권한 커스터마이징 개발
1. 보고서 권한
  데이터 원본 사용 추가 (데이터 원본 수정 / 삭제 권한)
2. 앱 및 기능 권한 추가 (그룹, 사용자)
  - SNB 관리
   - 대시보드
   - 비정형보고서
   - 스프레드 시트
   - 환경설정
 - 보고서 관리
  - 보고서 조회 기간 설정
  - 쿼리 보기
  - 보고서 형상 관리
  - 보고서 저장, 삭제
  - 데이터 원본 수정, 삭제
- 데이터 집합
  - 주제영역
  - 쿼리 직접 입력
  - 단일 테이블
  - 사용자 정의 데이터

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -543,6 +543,7 @@
   "reportNotDeleteMsg": "저장되지 않은 보고서 입니다.",
   "reportDeleteMsg": "보고서를 삭제하시겠습니까?",
   "reportPermission": "보고서 수정 권한이 없습니다.",
+  "datasourcePermission": "보고서 수정 권한이 없습니다.",
   "sortByItem": "정렬 기준 항목",
   "newSortByItem": "새 정렬 기준 항목",
   "dataHighlight": "데이터 하이라이트",
