--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -323,7 +323,7 @@
   "saveReport": "저장",
   "deleteReport": "삭제",
   "downloadReport": "다운로드",
-  "connectReport": "연결 보고서",
+  "connectReport": "연결보고서 설정",
   "addContainer": "컨테이너 추가",
   "addChart": "일반 차트",
   "addPivotGrid": "피벗 그리드",
@@ -791,7 +791,7 @@
   "dataAttributeList": "데이터속성목록",
   "reportList": "보고서목록",
   "requestWorkComplete": "작업을 완료해주세요.",
-  "linkReport": "연결 보고서",
+  "linkReport": "연결보고서 열기",
   "linkReportAlready": "이미 연결된 보고서 입니다.",
   "ToolbarVisible": "툴바표시",
   "editable": "편집",
@@ -1014,5 +1014,6 @@
   "execute": "실행",
   "privateReportGetError": "개인 보고서를 불러올 수 없습니다. 관리자에게 문의하세요.",
   "paramEditInputRequired": "입력창에서 조건절은 필수 입력 입니다.",
-  "designerNoReportNoLinkReport": "현재 열려있는 보고서가 없습니다.\n먼저 보고서를 열어주세요."
+  "NoReportNoLinkReport": "현재 열려있는 보고서가 없습니다.\n먼저 보고서를 열어주세요.",
+  "yesReportNoLinkReport": "현재 불러온 보고서 연결 보고서 정보가 없습니다.\n먼저 연결 보고서를 설정해주세요."
 }
