hotfix: 일반그리드 피벗그리드 처럼 내부 필터, 정렬 사용할 수 있도록 개선
+ 데이터 그리드 하이퍼링크 오류 수정

--- a/src/main/view/src/config/localization/devExpress/ko.json
+++ b/src/main/view/src/config/localization/devExpress/ko.json
@@ -130,9 +130,9 @@
       "dxDataGrid-applyFilterText": "Apply filter",
       "dxDataGrid-trueText": "true",
       "dxDataGrid-falseText": "false",
-      "dxDataGrid-sortingAscendingText": "Sort Ascending",
-      "dxDataGrid-sortingDescendingText": "Sort Descending",
-      "dxDataGrid-sortingClearText": "Clear Sorting",
+      "dxDataGrid-sortingAscendingText": "오름차순 정렬",
+      "dxDataGrid-sortingDescendingText": "내림차순 정렬",
+      "dxDataGrid-sortingClearText": "정렬 초기화",
       "dxDataGrid-editingSaveAllChanges": "Save changes",
       "dxDataGrid-editingCancelAllChanges": "Discard changes",
       "dxDataGrid-editingAddRow": "Add a row",
