hotFix/누락된 localizedString추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -632,5 +632,6 @@
   "privateReportListNoDataTxt": "There are no personal folders/reports for that user.",
   "execute": "execution",
   "privateReportGetError": "Personal reports cannot be loaded. Please contact your administrator.",
-  "paramEditInputRequired": "Conditional clauses are required input in the input window."
+  "paramEditInputRequired": "Conditional clauses are required input in the input window.",
+  "port": "Port"
 }
