데이터 필터 프론트 상호작용 수정
1. 항목 생성후 수정때마다 에러나던 현상 -> 중복체크용 state 별도 생성 후 관리
2. 피벗아이템 메타 아래 데이터필터링 정보 추가
3. 연결조건 AND, OR 추가

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -1019,5 +1019,6 @@
   "NoReportNoLinkReport": "현재 열려있는 보고서가 없습니다.\n먼저 보고서를 열어주세요.",
   "yesReportNoLinkReport": "현재 불러온 보고서 연결 보고서 정보가 없습니다.\n먼저 연결 보고서를 설정해주세요.",
   "port": "Port",
-  "pwChangeSuccess": "비밀번호 변경에 성공 했습니다. 다시 로그인해 주세요."
+  "pwChangeSuccess": "비밀번호 변경에 성공 했습니다. 다시 로그인해 주세요.",
+  "selectRelationCondition" : "연결 조건"
 }
