fix: 카드 차트 마스터 필터 추가, 카드 UI 개편, 카드 측정값 2개 이상 사용시 KPI 차트로 활용
format Percent일 경우 음수 파란색, 양수 빨간색
그 외는 첫 번째 측정값보다 클 경우 빨간색, 작을 경우 파란색

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -264,7 +264,7 @@
   "hello": "안녕하세요",
   "legned": "범례",
   "notationFormat": "표기형식",
-  "contentArray": "콘테츠배열",
+  "contentArray": "콘텐츠배열",
   "test": "테스트",
   "newWindow": "새 창 열기",
   "viewer": "뷰어",
