hotfix/환경설정 admin 유저 아닐시 라이선스 수정 못하도록 변경

--- a/src/main/view/src/config/localization/devExpress/ko.json
+++ b/src/main/view/src/config/localization/devExpress/ko.json
@@ -12,7 +12,7 @@
       "Back": "Back",
       "OK": "OK",
 
-      "dxCollectionWidget-noDataText": "No data to display",
+      "dxCollectionWidget-noDataText": "조회 된 데이터 없음.",
 
       "dxDropDownEditor-selectLabel": "Select",
 
