perf: 전체 다운로드 UI 개선 및 오류 수정
1. 탭 포함된 대시보드 다운로드 예외처리
2. 전체 다운로드 UI 개선

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -422,17 +422,17 @@
   "etc": "기타",
   "MSOffice": "MSOffice",
   "hancom": "Hancom",
-  "excelXlsx": "EXCEL(.xlsx)",
-  "excelMergeXlsx": "EXCEL-MG(.xlsx)",
-  "excelXls": "EXCEL(.xls)",
-  "word": "WORD(.docx)",
-  "powerpoint": "POWERPOINT(.pptx)",
+  "excelXlsx": "셀 병합 해제",
+  "excelMergeXlsx": "EXCEL(셀 병합)",
+  "excelXls": "EXCEL(셀 병합 해제)",
+  "word": "WORD",
+  "powerpoint": "POWERPOINT",
   "hwp": "hwp",
   "cell": "cell",
   "show": "show",
-  "img": "img",
+  "img": "IMG",
   "html": "html",
-  "pdf": "pdf",
+  "pdf": "PDF",
   "addDsUpload": "사용자 업로드",
   "addDsSingle": "단일 테이블",
   "editParameter": "매개변수 편집",
