feat: 메인화면 설정 추가

--- a/src/main/view/src/config/localization/devExpress/ko.json
+++ b/src/main/view/src/config/localization/devExpress/ko.json
@@ -102,8 +102,8 @@
       "dxDataGrid-ungroupHeaderText": "Ungroup",
       "dxDataGrid-ungroupAllText": "Ungroup All",
       "dxDataGrid-editingEditRow": "Edit",
-      "dxDataGrid-editingSaveRowChanges": "Save",
-      "dxDataGrid-editingCancelRowChanges": "Cancel",
+      "dxDataGrid-editingSaveRowChanges": "저장",
+      "dxDataGrid-editingCancelRowChanges": "취소",
       "dxDataGrid-editingDeleteRow": "Delete",
       "dxDataGrid-editingUndeleteRow": "Undelete",
       "dxDataGrid-editingConfirmDeleteMessage": "Are you sure you want to delete this record?",
