--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -764,7 +764,7 @@
   "reportManagement": "보고서 관리",
   "folderId": "폴더 ID",
   "dataSourceAddition": "데이터 원본 추가",
-  "successSave": "저장 했습니다.",
+  "successSave": "저장 완료되었습니다.",
   "saveFail": "저장에 실패 했습니다.",
   "successUpdate": "업데이트 했습니다.",
   "successRemove": "삭제 했습니다.",
