perf: 뷰어 전체 다운로드 UI 개선 및 셀 병합 다운로드 추가

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -422,9 +422,9 @@
   "etc": "기타",
   "MSOffice": "MSOffice",
   "hancom": "Hancom",
-  "excelXlsx": "셀 병합 해제",
+  "excelXlsx": "EXCEL(셀 병합 해제)",
   "excelMergeXlsx": "EXCEL(셀 병합)",
-  "excelXls": "EXCEL(셀 병합 해제)",
+  "excelXls": "EXCEL",
   "word": "WORD",
   "powerpoint": "POWERPOINT",
   "hwp": "hwp",
