--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -305,6 +305,7 @@
   "interactionConfiguration": "상호작용 설정",
   "crossDataSourceFiltering": "교차 데이터 소스 필터링",
   "ignoreMasterFilter": "마스터 필터 무시",
+  "onlyWithFilter": "필터가 있을 경우에만 조회",
   "targetDimension": "대상 차원",
   "dimensionGroup": "차원 그룹",
   "NoFunction": "함수 없음",
