hotfix: 보고서/폴더 관리 개인 보고서 보고서 개수 추가

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -759,6 +759,7 @@
   "publisher": "게시자",
   "registerDate": "게시일자",
   "reportlist": "보고서 목록",
+  "reportCount": "보고서 개수",
   "reportInformation": "보고서 정보",
   "folderInformation": "폴더 정보",
   "userGroupManagement": "사용자/그룹관리",
