hotfix/엑셀업로드리소스맵 권한 기능 추가

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -1024,5 +1024,6 @@
   "yesReportNoLinkReport": "현재 불러온 보고서 연결 보고서 정보가 없습니다.\n먼저 연결 보고서를 설정해주세요.",
   "port": "Port",
   "pwChangeSuccess": "비밀번호 변경에 성공 했습니다. 다시 로그인해 주세요.",
-  "selectRelationCondition" : "연결 조건"
+  "selectRelationCondition" : "연결 조건",
+  "userExcelResourceRunMode": "엑셀/리소스맵 권한"
 }
