hns/fix/워드클라우드 다운로드 에러
현재 워드 클라우드가 포함 된 다운로드에서 에러 발생 발견하지 못하여, 다른 에러 처리.

1. 대시보드 초기화면에서(차트만 있는 경우 or 마이페이지 초기아이템) 에 tabId 부여 0번으로 -> 초기상태에서 탭 활성화 후 다른 아이템 추가 -> 전체 다운로드시 초기아이템은 tabID 지정이 안되어 다운로드에서 제외 됨.

2. 아이템 이름이 공백일 경우 다운로드시 에러 발생하여 아이템 이름을 공백으로 지정하지 못하게 변경.

기타 ReportDownload.js 폴더 추가. (추후 utility 추가 가능성이 있어 폴더로 나눔.)

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -634,5 +634,6 @@
   "privateReportGetError": "Personal reports cannot be loaded. Please contact your administrator.",
   "paramEditInputRequired": "Conditional clauses are required input in the input window.",
   "port": "Port",
-  "pwChangeSuccess": "The password change was successful. Please log in again."
+  "pwChangeSuccess": "The password change was successful. Please log in again.",
+  "itemNameNoBlank": "Item name cannot be empty. Please enter again."
 }
