--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -634,5 +634,7 @@
   "privateReportGetError": "Personal reports cannot be loaded. Please contact your administrator.",
   "paramEditInputRequired": "Conditional clauses are required input in the input window.",
   "port": "Port",
-  "pwChangeSuccess": "The password change was successful. Please log in again."
+  "pwChangeSuccess": "The password change was successful. Please log in again.",
+  "deltaValue": "Variation measure",
+  "dataFiltering": "Data Filtering"
 }
