--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -1026,5 +1026,7 @@
   "port": "Port",
   "pwChangeSuccess": "비밀번호 변경에 성공 했습니다. 다시 로그인해 주세요.",
   "selectRelationCondition" : "연결 조건",
-  "userExcelResourceRunMode": "엑셀/리소스맵 권한"
+  "userExcelResourceRunMode": "엑셀/리소스맵 권한",
+  "deltaValue": "변동 측정값",
+  "dataFiltering": "데이터 필터링"
 }
